--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                         <div class="p-3 bg-gray-700 text-gray-200 rounded">HTML / CSS / JavaScript</div>
                         <div class="p-3 bg-gray-700 text-gray-200 rounded">Figma & Prototyping</div>
                         <div class="p-3 bg-gray-700 text-gray-200 rounded">Cybersecurity (Certified)</div>
-                        <div class="p-3 bg-gray-700 text-gray-200 rounded">Google Digital Marketing & E-commerce</div>
+                        <div class="p-3 bg-gray-700 text-gray-200 rounded">Google Digital Marketing & E-commerce (Certified)</div>
                     </div>
                 </aside>
             </section>
