--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
             <!-- Mobile Menu Content (Toggled by JS) -->
             <div id="mobile-menu" class="mobile-menu-closed sm:hidden border-t border-gray-700">
                 <div class="pt-2 pb-3 space-y-1 px-6">
-                    <a href="#projects"
-                        class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Projects</a>
-                    <a href="#skills"
-                        class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Skills</a>
                     <a href="#about"
                         class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">About</a>
+                    <a href="#projects"
+                        class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Projects</a>
+                    <a href="#services"
+                        class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Services</a>
+                        <a href="#skills"
+                            class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Skills</a>
                     <a href="#contact"
                         class="block text-base font-medium text-indigo-400 hover:bg-gray-700 hover:text-white w-full px-3 py-2 rounded-lg transition duration-150 ease-in-out">Contact</a>
                 </div>
